# memlog

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.experimental  README.md  entrypoint.sh  healthcheck.sh  index.html  justfile  mcp_server.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  tailwind.config.js  vite.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  cleanup.yml  docs.yml  lint.yml
authentication/: index.html
client/: App.vue  api.js  index.html  router.js  style.css
client/assets/fonts/Poppins/: OFL.txt
client/components/: Logo.vue
client/partials/: NavBar.vue
client/public/: site.webmanifest
client/views/: Home.vue  SearchResults.vue
configuration/: index.html
docs/: authentication.md  configuration.md  index.md  installation.md  mcp-server.md  reverse-proxy.md  search.md
installation/: index.html
mcp-server/: index.html  pyproject.toml
mcp-server-rs/: Cargo.toml
mcp-server-rs/src/: main.rs
mcp-server/memlog_mcp/: main.py
mcp-server/tests/: test_tools.py
reverse-proxy/: index.html
search/: index.html  search_index.json
server/: global_config.py  main.py  pyproject.toml
server-rs/: Cargo.toml
server-rs/src/: config.rs  error.rs  main.rs  models.rs
server-rs/src/attachments/: fs.rs  mod.rs
server-rs/src/auth/: mod.rs
server-rs/src/notes/: fs.rs  mod.rs
server-rs/src/routes/: mod.rs
server-rs/src/search/: mod.rs
server/attachments/file_system/: file_system.py
server/auth/local/: local.py
server/memlog/: attachments.py  auth.py  config.py  errors.py  main.py  models.py  notes.py  search.py  search_qdrant.py
server/notes/file_system/: __init__.py  file_system.py
server/tests/: conftest.py  test_attachments.py  test_auth.py  test_helpers.py  test_notes.py  test_routes.py  test_search.py  test_search_qdrant.py
tests/: test_mcp_server.py
