[project]
name = "flatnotes"
version = "5.5.4"
requires-python = ">=3.12"
dependencies = [
    "whoosh==2.7.4",
    "fastapi>=0.118.3",
    "uvicorn[standard]>=0.37.0",
    "aiofiles>=25.1.0",
    "python-jose[cryptography]>=3.5.0",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = ["ruff>=0.4.0"]

[tool.ruff]
line-length = 79
src = ["server"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["server"]
