[project]
name = "memlog"
version = "0.0.4"
requires-python = ">=3.12"
dependencies = [
    "whoosh==2.7.4",
    "fastapi>=0.118.3",
    "uvicorn[standard]>=0.37.0",
    "aiofiles>=25.1.0",
    "python-jose[cryptography]>=3.5.0",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "httpx>=0.27",
    "pre-commit>=3.0",
    "respx>=0.22.0",
]
mcp = ["mcp[cli]>=1.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["server/tests", "tests"]
pythonpath = ["server", "."]

[tool.setuptools.packages.find]
where = ["server"]

[tool.bandit]
targets = ["server"]
exclude_dirs = ["server/tests"]
skips = ["B101"]  # assert statements are fine in tests (already excluded) and non-critical paths

[tool.ruff]
line-length = 79
src = ["server"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["server"]
