[package]
name = "memlog-mcp"
version = "0.0.1-rc.3"
edition = "2021"

[dependencies]
rmcp = { version = "1.2", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = "0.8"
tokio-util = "0.7"
schemars = "1.0"
