[project]
name = "memlog-mcp"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.3",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.9",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
