[package]
name = "memlog-server"
version = "0.0.1-rc.2"
edition = "2021"

[[bin]]
name = "memlog-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tantivy = "0.22"
jsonwebtoken = "9"
totp-rs = { version = "5", features = ["qr"] }
qrcode = "0.14"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
subtle = "2"
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
