[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memlog"
version = "0.0.4-rc.5"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118",
    "whoosh>=2.7",
    "python-jose[cryptography]>=3.3",
    "pyotp>=2.9",
    "qrcode>=8.0",
    "aiofiles>=24.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
qdrant = [
    "llama-index>=0.12",
    "llama-index-vector-stores-qdrant>=0.4",
    "llama-index-embeddings-ollama>=0.4",
    "qdrant-client>=1.12",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.11",
    "types-aiofiles>=24.1",
    "types-python-jose>=3.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
